# openenv-ticket-router

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  _tmp_out.txt  _tmp_src.txt  client.py  grader.py  inference.py  openenv.yaml  pyproject.toml  test_env.py  tmp_out.txt  upload.py
openenv_ticket_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  app.py  rubrics.py  ticket_router_environment.py
tasks/: basic_routing.yaml  extraction_routing.yaml  pii_redaction.yaml
